fixed for mobile

--- a/custom.css
+++ b/custom.css
@@ -81,6 +81,7 @@ body {
 .theProject {
   margin: 0.5em;
   padding: 1em;
+  margin-bottom: 2em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   transition: all 0.2s ease-in-out;
 }
