--- a/custom.css
+++ b/custom.css
@@ -7,7 +7,9 @@ body {
     rgba(13, 13, 134, 1) 100%
   );
 }
-
+b {
+  color: darkblue;
+}
 .cert {
   width: 8em;
   height: 8em;
@@ -69,7 +71,7 @@ body {
 .profilePic {
   overflow: hidden;
   border-radius: 50%;
-  box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.9), 0 1px 20px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0 10px 50px 0 rgba(0, 0, 0, 0.9), 0 1px 1px 0 rgba(0, 0, 0, 0.5);
 }
 
 @media (max-width: 800px) {
